@@ -583,6 +583,14 @@ conky(1)							      conky(1)
 	      is BAT0).
 
 
+       1mbattery_short (num)0m
+	      Battery  status and remaining percentage capacity of ACPI or APM
+	      battery. ACPI battery number can be given as  argument  (default
+	      is  BAT0).  This mode display a short status, which means that C
+	      is displayed instead of charging and D is displayed  instead  of
+	      discharging.
+
+
        1mbattery_bar (height),(width) (num)0m
 	      Battery percentage remaining of ACPI battery in a bar. ACPI bat‐
 	      tery number can be given as argument (default is BAT0).
