@@ -530,6 +530,11 @@ The current volume fetched from Audacious
 Battery status and remaining percentage capacity of ACPI or APM battery. ACPI battery number can be given as argument (default is BAT0).
 
 .TP 
+\fB\*(T<\fBbattery_short\fR\*(T>\fR \*(T<\fB(num)\fR\*(T> 
+Battery status and remaining percentage capacity of ACPI or APM battery. ACPI battery number can be given as argument (default is BAT0).
+This mode display a short status, which means that C is displayed instead of charging and D is displayed instead of discharging.
+
+.TP 
 \fB\*(T<\fBbattery_bar\fR\*(T>\fR \*(T<\fB(height),(width) (num)\fR\*(T> 
 Battery percentage remaining of ACPI battery in a bar. ACPI battery number can be given as argument (default is BAT0).
 
