@@ -92,5 +92,6 @@ void get_acpi_fan(char *, size_t);
 void get_battery_stuff(char *buf, unsigned int n, const char *bat, int item);
 int get_battery_perct(const char *bat);
 int get_battery_perct_bar(const char *bat);
+void get_battery_short_status(char *buf, unsigned int n, const char *bat);
 
 #endif /* _COMMON_H */
