@@ -1,3 +1,6 @@
+2009-02-17
+	* Added $battery_short patch, sf.net id #2300911 (thanks Swoog)
+
 2009-02-15
 	* Added out_to_x
 
